@@ -12,7 +12,6 @@ my $builder = Module::Build->new(
     },
     requires       => {
         'Moose'          => 0,
-        'Moose::Autobox' => '0.11',
         'Pod::Elemental' => '0.101620',
         'Pod::Weaver'    => 0,
     },
