@@ -7,7 +7,6 @@ use lib 't/inc';
 
 use Test::More;
 use Test::Differences;
-use Moose::Autobox 0.10;
 
 use PPI;
 
